--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ for(let i=0;i<25;i++){
 <div class="progress-text" id="progressText">0 / 0 • 0%</div>
 
 <div class="add-task">
-  <input id="taskInput" placeholder="Write something magical..." />
+  <input id="taskInput" placeholder="Write something magical . . ." />
   <select id="priority">
     <option value="💜">normal</option>
     <option value="⭐">high</option>
@@ -189,10 +189,14 @@ for(let i=0;i<25;i++){
 </div>
 </div>
 
+<audio id="popSound">
+  <source src="data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=">
+</audio>
+
 <script>
 const affirmations=[
 "You’re doing amazing 💜",
-"Small steps still count 🪐",
+"Small steps still count 🌱",
 "Be gentle with yourself 🌙",
 "You showed up today ✨",
 "Progress over perfection ⭐"
