--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ for(let i=0;i<25;i++){
 <script>
 const affirmations=[
 "You’re doing amazing 💜",
-"Small steps still count 🌱",
+"Small steps still count 🪐",
 "Be gentle with yourself 🌙",
 "You showed up today ✨",
 "Progress over perfection ⭐"
